--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /OCP/Códigos OCP/001_Advanced_Class_Design/nbproject/private/
 /OCP/Códigos OCP/001_Advanced_Class_Design/build/
+/OCP/Códigos OCP/999_Pattern Design/nbproject/private/
