--- a/OCP/Códigos OCP/999_Pattern Design/nbproject/project.properties
+++ b/OCP/Códigos OCP/999_Pattern Design/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pkg999_pattern.design.Design
+main.class=PD001_Singlenton.Design
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
