--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /OCP/Códigos OCP/001_Advanced_Class_Design/build/
 /OCP/Códigos OCP/999_Pattern Design/nbproject/private/
 /OCP/Códigos OCP/999_Pattern Design/build/
+/OCP/Códigos OCP/001_Advanced_Class_Design/dist/
